--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^6.19.6",
     "@mui/x-data-grid-generator": "^6.19.6",
+    "@mui/x-data-grid-pro": "^6.19.6",
     "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.1",
@@ -20,6 +21,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
