--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^5.0.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.37",
@@ -21,6 +22,7 @@
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
     "flowbite-react": "^0.7.2",
+    "gsap": "^3.12.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,6 +32,8 @@
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-transition-group": "^4.4.5",
+    "sass": "^1.74.1",
     "swiper": "^11.0.7",
     "web-vitals": "^2.1.4"
   },
