--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@coreui/react": "^5.0.0",
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.37",
@@ -21,6 +22,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "date-fns": "^3.3.1",
+    "emailjs": "^4.0.3",
     "flowbite-react": "^0.7.2",
     "gsap": "^3.12.5",
     "moment": "^2.30.1",
