--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "base-64": "^1.0.0",
+    "bcryptjs": "^2.4.3",
+    "buffer": "^6.0.3",
     "date-fns": "^3.3.1",
     "emailjs": "^4.0.3",
     "flowbite-react": "^0.7.2",
