--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shestoy06.github.io/zoo-front",
+  "homepage": "https://Shestoy06.github.io/zoo-front/home",
   "name": "zoo-front",
   "version": "0.1.0",
   "private": true,
